# cyclemetry

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  DOCKER_README.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  Procfile  QUICKSTART.md  README.md  TODOS.md  activity.py  app.py  config.py  constant.py  default_attributes.json  designer.py  docker-compose.dev.yml  docker-compose.yml  fix_icon.py  frame.py  gpx.py  gpx_attribute_map.json  gradient.py  gradient_playground.ipynb  jupyter_requirements.txt  main.py  package.json  pad_icon.py  plot.py  pnpm-lock.yaml  readme.md  requirements.txt  scene.py  scene_config.json  scene_defaults.json
.githooks/: pre-commit
.github/workflows/: release.yml  windows-build.yml
app/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  components.json  eslint.config.js  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
app/public/: index.html
app/src/: App.jsx  Editor.jsx  Editor2.jsx  PreviewPanel.jsx  app.svelte  config_schema.jsx  custom.scss  index.css  index.js  main.js
app/src/api/: backend.js  generateDemoFrame.jsx  gpxUtils.js  gpxUtils.jsx  renderVideo.js  renderVideo.jsx
app/src/components/: ActivitySection.jsx  BackendStatus.jsx  ControlPanel.jsx  DemoPreview.jsx  DemoPreviewComponent.jsx  ErrorAlert.jsx  InteractiveOnboarding.jsx  OnboardingState.jsx  RenderProgressOverlay.jsx  RenderSection.jsx  ResetButton.jsx  TemplateEditor.jsx  TemplatesSection.jsx  TimelineControls.jsx
app/src/components/buttons/: LoadDemoGpxButton.jsx  (+3 more)
app/src/lib/: utils.js
app/src/state/: appState.svelte.js
app/src/store/: useStore.js
app_backup/: .dockerignore
app_backup/src/api/: generateDemoFrame.jsx  renderVideo.jsx
app_backup/src/components/: BackendStatus.jsx  InteractiveOnboarding.jsx  ResetButton.jsx  TimelineControls.jsx
backend/: .dockerignore  .gitignore  Dockerfile  README.md  activity.py  app.py  compile_sidecar.sh  config.py  constant.py  designer.py  frame.py  gradient.py  main.py  out.prof  plot.py  pyproject.toml  requirements.txt  scene.py  template.py  utils.py
backend/experiments/: gradient_playground.ipynb
backend/public/: demo.gpxinit  index.html
backend/templates/: default.json
backend/test/: test_activity.py  test_scene
backend/utils/: __init__.py  api_helpers.py  logger.py
community-templates/: full_metrics.json  manifest.json  power_and_hr.json  speed_only.json
designer/: .gitignore
designer/frontend/: package.json
designer/frontend/public/: index.html
designer/frontend/src/: App.jsx  Editor.jsx  FileUpload.jsx
designer/templates/: safa_brian_a_2k.json  safa_brian_a_4k.json
designer_app/: .gitignore  README.md  package-lock.json  package.json
designer_app/public/: index.html  manifest.json
designer_app/src/: App.jsx  Editor.jsx  FileUpload.jsx  FlaskServerStatus.jsx
docs/: asset-manifest.json  index.html
docs/static/js/: 453.77b5c223.chunk.js
eel/: .gitignore  Dockerfile  README.md  activity.py  app.py  constant.py  designer.py  frontendREADME.md  main.py  package-lock.json  package.json  react-eel-app.spec  requirements.txt  scene.py  template.py
eel/public/: index.html  manifest.json
eel/public/templates/: README.md  safa_brian_a_4k_gradient.json  walker_crit_a.json
eel/src/: App.jsx  Editor.jsx  PreviewPanel.jsx  custom.scss  eel.js
eel/src/api/: generateDemoFrame.jsx  loadGpxFile.jsx  uploadGpxFile.jsx
eel/src/components/: DemoPreview.jsx
frontend/: .gitignore  README.md  package.json
frontend/public/: index.html
frontend/src/: App.jsx  Editor.jsx  FileUpload.jsx  FlaskServerStatus.jsx  PreviewPanel.jsx  config_schema.jsx  config_schema_hack.jsx  custom.scss
frontend/src/api/: generateDemoFrame.jsx
frontend/src/components/: DemoPreview.jsx
newdesign/: index.html  package.json  vite.config.ts
newdesign/src/app/: App.tsx
nex-client-rewrite/: README.md  context.tsx  package.json
nex-client-rewrite/app/: layout.tsx  page.tsx
nex-client-rewrite/components/: Sidebar.tsx  p5utils.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.png.bak
src-tauri/src/: lib.rs  recent.rs
src-tauri/src/render/: activity.rs  chart.rs  color.rs  frame.rs  mod.rs  scene.rs  template.rs
template_editor/: App.jsx  Editor.jsx  PreviewPanel.jsx  custom.scss  index.js  package.json
template_editor/api/: generateDemoFrame.jsx
template_editor/components/buttons/: LoadTemplateButton.jsx
templates/: .gitignore  README.md  blank_template.json  course.json  crit.json  default_scene.json  full_metrics.json  initconfig.json  readme.md  safa_brian.json  safa_brian_a.json  safa_brian_a_1280_720.json  safa_brian_a_2k.json  safa_brian_a_4k.json  safa_brian_a_4k_gradient.json  spec.json  test_template.json  walker_crit_a.json
templates/TO_BE_REFACTORED/: manifest.json  power_and_hr.json  safa_brian_a_1280_720.json  safa_brian_a_2k.json  safa_brian_a_4k.json
templates/aaron/: aaron.json
templates/crit/: crit.json
templates/jeff/: jeff.json
templates/safa/: safa.json
(+62 files in other folders)
